# CICD-agents

./: .env.example  .eslintrc.cjs  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
CICD Agent/: .gitignore  README.md  pyproject.toml
CICD Agent/cli/: __init__.py  main.py  runtime_client.py
CICD Agent/runtime/: __init__.py  __main__.py
CICD Agent/runtime/api/: routes.py  schemas.py
CICD Agent/runtime/config/: profiles.py  profiles.yaml  settings.py
CICD Agent/runtime/core/: context_builder.py  llm_client.py  memory_store.py  pipeline_agent.py  pipeline_agent_impl.py  planner.py  repo_indexer.py  task_queue.py  tool_executor.py  vector_index.py
CICD Agent/runtime/index/: database.py  schema.sql
CICD Agent/runtime/tools/: azure_devops_tool.py  dotnet_tool.py  git_tool.py  npm_tool.py  pytest_tool.py
CICD Agent/tests/: conftest.py
CICD Agent/tests/integration/: test_pipeline_agent_offline.py
CICD Agent/tests/unit/: test_context_builder.py  test_memory_store.py  test_planner_offline.py  test_profiles.py  test_repo_indexer.py  test_tool_executor.py
apps/desktop/: .env  .env.production  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: build-sidecar.mjs  ensure-sidecar.mjs
apps/desktop/src/: App.tsx  api.ts  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/pages/: Chat.tsx  Dashboard.tsx  Profiles.tsx  PullRequests.tsx  Repos.tsx  ReviewFindings.tsx  Settings.tsx  TaskViewer.tsx
docs/: architecture.md  azure-app-registration-request.md  conversation-git-agent-optimization.md  observability.md  poc-validation.md  v2-status.md
docs/adr/: 0000-template.md  0001-runtime-stack.md  0002-review-agent-hosting.md  0003-ai-endpoint.md  0004-storage.md  0005-auth.md  0006-dashboard-deferral.md  0007-package-layout.md
runtime/: NOTICE.md
scripts/windows/: create-dev-code-signing-cert.ps1  sign-dev-artifacts.ps1
