[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicd-agent"
version = "0.1.0"
description = "Local Agent Runtime for CI/CD: indexes a repo locally and runs a Pipeline Agent against Azure OpenAI + Azure DevOps."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "CI/CD Agent Team" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "typer[all]>=0.12.0",
  "httpx>=0.27.0",
  "tree-sitter>=0.21.3",
  "tree-sitter-languages>=1.10.2",
  "sqlite-vec>=0.1.6",
  "openai>=1.40.0",
  "tiktoken>=0.7.0",
  "gitpython>=3.1.43",
  "keyring>=25.0.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "pytest-httpx>=0.30.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
dev-agent = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "runtime*"]

[tool.setuptools.package-data]
"runtime.index" = ["*.sql"]
"runtime.config" = ["*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = [
  "E501",   # line length is enforced via formatter; keep room for prompts/diffs
  "B007",   # loop var ('for step in range(...)') is intentional
  "B008",   # FastAPI/Typer default factories
  "B905",   # zip(strict=...) - many call sites use Python <3.10 patterns
  "SIM103", # return condition directly - sometimes hurts readability
  "SIM105", # contextlib.suppress vs try/except/pass - both fine
  "UP022",  # capture_output vs stdout=PIPE - both fine
]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
